--- a/css/style.css
+++ b/css/style.css
@@ -2311,6 +2311,18 @@ blockquote {
   padding-bottom: 25px;
 }
 
+/* Tablet breakpoint para team grid */
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .team-grid {
+    grid-column-gap: 25px;
+    grid-row-gap: 25px;
+  }
+  
+  .team-img {
+    height: 260px;
+  }
+}
+
 .contact-section {
   padding-top: 60px;
   padding-bottom: 60px;
